# itmo_master

./: README.md
1/algorithms/: .gitignore  sort.h  sort_impl.h
1/algorithms/lab1/: .gitignore  game.cpp  game.h  main.cpp  makefile  utils.cpp  utils.h
1/algorithms/lab2/: arraylist.h  makefile
1/algorithms/lab2/test/: tests.cpp
1/algorithms/lab3/: .gitignore  CMakeLists.txt  lab3.cpp  main.cpp  make_array.py  plot.py  sort.h
1/algorithms/lab3/test/: CMakeLists.txt  tests.cpp
1/algorithms/lab4/: .gitignore  CMakeLists.txt  dice.cpp  dice.h  main.cpp  plot.py  utils.cpp  utils.h
2/cg/: cg.sln
2/cg/framework/: camera.cpp  collider.cpp  component.cpp  framework.vcxproj  framework.vcxproj.filters  game.cpp  mesh.cpp  meshComponent.cpp  object.cpp  pch.h  positionedComponent.cpp  render.cpp  sceneComponent.cpp  shader.cpp  shapes.cpp  transform.cpp  window.cpp
2/cg/framework/include/: camera.h  component.h  game.h  input.h  material.h  mesh.h  render.h  shader.h  shapes.h  transform.h  window.h
2/cg/lab1/: fpsCounterComponent.cpp  lab1.cpp  lab1.vcxproj  render.cpp  shader.cpp
2/cg/lab1/include/: mesh.h  render.h  shader.h
2/cg/lab1/shaders/: vertexShader.hlsl
2/cg/lab2/: ball.cpp  controller.cpp  lab2.cpp  lab2.vcxproj  lab2.vcxproj.filters  paddle.cpp
2/cg/lab2/include/: ball.h  controller.h  paddle.h
2/cg/lab3/: celestialBody.cpp  lab3.cpp  lab3.vcxproj
2/cg/lab3/include/: celestialBody.h
2/cg/lab3/shaders/: pixelShader.hlsl  vertexShader.hlsl
2/graphics/lab1/: lab1.sln
2/graphics/lab1/lab1/: delegates.cpp  game.cpp  input.cpp  lab1.cpp  (+5 more)
(+151 files in other folders)
